# open_trading_algo

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  23-03-07-TV-Data Input.csv  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README copy.md  README.md  all_tickers.yaml  api_config.yaml  cols.yaml  cols_alerts.yaml  column_print_order.txt  data_preview.txt  data_processing.py  db_config.yaml  env.example  live_data_config.yaml  populate_database.py  pyproject.toml  raw_data.txt  run_model.py  secrets.env.example
config/: api_config.yaml  db_config.yaml
data/: 01-31A.csv  01-31D.csv  02-01A.csv  02-01D.csv  02-06A.csv  02-07D.csv  02-08A.csv  02-09D.csv  02-10A.csv  02-13D.csv  02-14A.csv  02-14D.csv  02-15D.csv  02-17D.csv  02-21A.csv  02-21D.csv  02-22A.csv  02-22D.csv  02-23D.csv  02-27A.csv  02-27D.csv  03-03A.csv  03-03D.csv  03-06A.csv  03-07D.csv  03-13A.csv  03-13D.csv  03-15A.csv  03-16A.csv  03-16D.csv  03-17A.csv  03-17D.csv  03-20A.csv  03-20D.csv  03-21A.csv  03-21D.csv  03-22A.csv  03-22D.csv  Tickers.txt
docs/: README.md  configuration.md  data-apis.md  data-cache.md  indicators.md  installation.md  models.md  quickstart.md
examples/: live_data_demo.py  pipeline_demo.py
legacy/: col_labels.txt  data_processing.py  raw_data.txt
legacy/data/: 02-06D.csv  02-07A.csv  02-08D.csv  02-09A.csv  02-10D.csv  02-13A.csv  02-15A.csv  02-16A.csv  02-16D.csv  02-17A.csv  02-23A.csv  02-24A.csv  02-24D.csv  02-28A.csv  02-28D.csv  03-01A.csv  03-01D.csv  03-02A.csv  03-02D.csv  03-06D.csv  03-07A.csv  03-15D.csv  (+2 more)
open_trading_algo/: README.md  __init__.py  data_enrichment.py  live_data.py  pipeline.py  populate_database.py  risk_management.py  signal_optimizer.py  types.py  v8_model.py
scripts/: cache_aapl_10y.py  setup_db.py
tests/: test_alerts.py  test_backtesting.py  test_config.py  test_data_cache.py  test_data_enrichment.py  test_indicators.py  test_integration.py  test_live_data.py  test_models.py  test_sentiment.py  test_signals.py
tradingview_algo/: README.md  __init__.py  alerts.py  data_cache.py  data_enrichment.py  indicators.py  live_data.py  long_signals.py  options_signals.py  percent_rank.py  pipeline.py  populate_database.py  risk_management.py  secure_api.py  sentiment_signals.py  short_signals.py  signal_optimizer.py  types.py  v8_model.py
(+48 files in other folders)
