
[tool.poetry]
name = "tradingview-algo"
version = "1.0.0"
description = "A modular, portable trading and backtesting framework with signal, risk, and data enrichment support."
authors = ["Philip Mai <philipemai.com>"]
readme = "README.md"
packages = [
	{ include = "tradingview_algo" }
]
[tool.setuptools]
packages = ["tradingview_algo"]

[tool.poetry.scripts]
run-model = "tradingview_algo.pipeline:main"


[tool.poetry.dependencies]

python = "^3.8"
pandas = "^1.3.0"
numpy = "^1.21.0"
yfinance = "^0.2.0"
PyYAML = "^6.0"
scikit-learn = "^1.0.0"
sqlite3 = "*"


[tool.poetry.group.dev.dependencies]



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 101

[tool.flake8]
max-line-length = 101
extend-ignore = ['402','F841','F401','E302','E305','E203','W503','C901','W1514', 'F403']
exclude = ['.git','__pycache__','build','devel','logs','.catkin_tools']
max-complexity = 10

[tool.isosort]
profile = "black"

[tool.pylint.message_control]
disable = ["import-error"]
