
[tool.poetry]
name = "open_trading_algo"
version = "0.1.0"
description = "A modular, portable trading and backtesting framework with signal, risk, and data enrichment support."
authors = ["Philip Mai <philip.e.mai@gmail.com>"]
readme = "README.md"
packages = [
	{ include = "open_trading_algo" }
]
[tool.setuptools]
packages = ["open_trading_algo"]

[tool.poetry.scripts]
run-model = "open_trading_algo.pipeline:main"


[tool.poetry.dependencies]

python = "^3.8"
pandas = "^2.2.2"
numpy = "^1.26.4"
yfinance = "^0.2.40"
PyYAML = "^6.0.1"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]

pre-commit = "^3.7.0"
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
shellcheck-py = "^0.10.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 101

[tool.flake8]
max-line-length = 101
extend-ignore = ['402','F841','F401','E302','E305','E203','W503','C901','W1514', 'F403']
exclude = ['.git','__pycache__','build','devel','logs','.catkin_tools']
max-complexity = 10

[tool.isosort]
profile = "black"

[tool.pylint.message_control]
disable = ["import-error"]
